--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>İlkay & Berat</title>
       <!-- if development -->
-      <script type="module" src="http://localhost:5173/@vite/client"></script>
+      <script type="module" src="http://beratarpa.com/@vite/client"></script>
       <script type="module">
-          import RefreshRuntime from 'http://localhost:5173/@react-refresh'
+          import RefreshRuntime from 'http://beratarpa.com/@react-refresh'
           RefreshRuntime.injectIntoGlobalHook(window)
           window.$RefreshReg$ = () => {}
           window.$RefreshSig$ = () => (type) => type
@@ -17,6 +17,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="http://localhost:5173/main.jsx"></script>
+    <script type="module" src="http://beratarpa.com/main.jsx"></script>
   </body>
 </html>
