--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/Images/4.jpg" />
+    <link rel="icon" type="image/jpeg" href="/Images/4.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🤍İlkay & Berat🤍</title>
+    <title>&#x1F90D; İlkay & Berat &#x1F90D;</title>
     
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
