--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="music-control">
-        <button id="musicToggle">🎵</button>
-        <span id="musicStatus">Durdur</span>
-    </div>
-
     <div class="heart-container">
         <button id="heartBtn" class="heart">❤️</button>
     </div>
@@ -51,12 +46,12 @@
     <section class="memories">
         <h2>✨ Unutulmaz Anılarımız ✨</h2>
         <div class="gallery">
-            <img src="images/photo1.jpg" alt="Anı 1" onclick="openModal(this)">
-            <img src="images/photo2.jpg" alt="Anı 2" onclick="openModal(this)">
-            <img src="images/photo3.jpg" alt="Anı 3" onclick="openModal(this)">
-            <img src="images/photo4.jpg" alt="Anı 4" onclick="openModal(this)">
-            <img src="images/photo5.jpg" alt="Anı 5" onclick="openModal(this)">
-            <img src="images/photo6.jpg" alt="Anı 6" onclick="openModal(this)">
+            <img src="images/1.jpg" alt="Anı 1" onclick="openModal(this)">
+            <img src="images/5.jpg" alt="Anı 2" onclick="openModal(this)">
+            <img src="images/3.jpg" alt="Anı 3" onclick="openModal(this)">
+            <img src="images/4.jpg" alt="Anı 4" onclick="openModal(this)">
+            <img src="images/2.jpg" alt="Anı 5" onclick="openModal(this)">
+            <img src="images/6.jpg" alt="Anı 6" onclick="openModal(this)">
         </div>
     </section>
 
@@ -77,13 +72,8 @@
         <p>❤️ İlkay & Berat - 2025 ❤️</p>
     </footer>
 
-    <audio id="backgroundMusic" loop>
-        <source src="music/background-music.mp3" type="audio/mpeg">
-    </audio>
-
     <script src="js/popup.js"></script>
     <script src="js/snow.js"></script>
-    <script src="js/music.js"></script>
     <script src="js/heart.js"></script>
     <script src="js/countdown.js"></script>
     <script src="js/gallery.js"></script>
